fixed about jumping

--- a/assets/stylesheets/portfolio.scss
+++ b/assets/stylesheets/portfolio.scss
@@ -27,6 +27,10 @@ body{
   width: 50%;
 }
 
+.float-right{
+  float:right !important;
+}
+
 #landingSlide{
   @extend .nav-footer;
   .nav-footer{
